# Noctil

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
archive/docs/: System_Architecture.md
docs/: Architecture.md  System_Architecture.md  design_patterns.md
include/noctil/core/: EventLoop.hpp
include/noctil/hal/: BleScanner.hpp
include/noctil/utils/: UniqueFD.hpp
src/: main.cpp
src/core/: EventLoop.cpp
